# percona-helm-charts

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  application.db.yaml  ct.yaml  index.yaml  pyproject.toml  test.sh
.circleci/: config.yml  install_charts.sh  install_tools.sh  release.sh  update_docs.sh
.github/: CODEOWNERS  ct.yaml  labeler.yml  lintconf.yaml
.github/workflows/: everest-lint-test.yaml  everest-pr-checks.yaml  everest-release.yaml  labeler.yaml  pmm-ha-pr-checks.yaml  psmdb-operator-crd-sync-check.yaml  release.yaml  test.yaml
charts/: index.yaml  test.yaml
charts/everest/: .helmignore  Chart.yaml  Makefile  NOTES.txt  README.md  README.md.gotmpl  everest-admin.yaml.tpl  go.mod  helm.go  values.yaml
charts/pg-db/: Chart.yaml  README.md  production-values.yaml  values.yaml
charts/pg-operator/: Chart.yaml  README.md  values.yaml
charts/pmm/: Chart.yaml  README.md  values.yaml
charts/pmm-ha/: Chart.yaml  README.md  init.sql  values.yaml
charts/pmm-ha-dependencies/: Chart.yaml  README.md  values.yaml
charts/prom-rds-exporter/: Chart.yaml  README.md  values.yaml
charts/ps-db/: Chart.yaml  README.md  values.yaml
charts/ps-operator/: Chart.yaml  README.md  mytemplate.yaml  values.yaml
charts/psmdb-db/: Chart.yaml  README.md  production-values.yaml  values.yaml
charts/psmdb-operator/: Chart.yaml  README.md  values.yaml
charts/psmdb-operator-crds/: Chart.yaml  README.md  values.yaml
charts/pxc-database/: Chart.yaml  values.yaml  (+1 more)
scripts/: gen-docs.sh
tests/: README.md  conftest.py  test_ps_db.py  test_ps_operator.py
(+507 files in other folders)
